Fixes overflow issues

--- a/docs/styleguide.styles.scss
+++ b/docs/styleguide.styles.scss
@@ -256,7 +256,8 @@ div[class^="rsg--preview"] {
   margin: $space-small 0 0;
   border-radius: 0;
   display: block;
-  overflow: hidden;
+  float: left;
+  width: 100%;
   border-top-left-radius: $border-radius-default;
   border-top-right-radius: $border-radius-default;
 }
